Refactor render calls in pages views

--- a/app/views/pages/brand_and_style_guidelines.html.haml
+++ b/app/views/pages/brand_and_style_guidelines.html.haml
@@ -1,7 +1,7 @@
 .page
   .hero-section
     %h1 Brand & Style Guidelines
-    %ul.public-subnav= render "subnav"
+    %ul.public-subnav= render partial: "pages/subnav"
   .main-section
     .main-section-content
       %ul
