--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -99,4 +99,4 @@
           View examples
           = glyph("long-arrow-right")
 
-= render "newsletter_signup"
+= render partial: "pages/newsletter_signup"
