--- a/app/views/pages/features.html.haml
+++ b/app/views/pages/features.html.haml
@@ -13,8 +13,8 @@
 
         #tabt1.ui-tabs-panel.ui-widget-content{role: "tabpanel"}
           .ui-tabs-panel#tab.active{role: "tabpanel", "aria-hidden" => false }
-            = render "instructor_features"
+            = render partial: "pages/instructor_features"
           .ui-tabs-panel#tabt2{role: "tabpanel", "aria-hidden" => false }
-            = render "student_features"
+            = render partial: "pages/student_features"
 
-= render "newsletter_signup"
+= render partial: "pages/newsletter_signup"
