--- a/app/views/pages/press.html.haml
+++ b/app/views/pages/press.html.haml
@@ -1,11 +1,11 @@
 .page
 	.hero-section
 		%h1 Press & Awards
-		%ul.public-subnav= render "subnav"
+		%ul.public-subnav= render partial: "pages/subnav"
 	.main-section
 		.main-section-content
 			%h2.title.bold Awards
-			%ul= render "awards"
+			%ul= render partial: "pages/awards"
 			%br
 			%h2.title.bold Press
-			%ul= render "articles"
+			%ul= render partial: "pages/articles"
