--- a/app/views/pages/research.html.haml
+++ b/app/views/pages/research.html.haml
@@ -1,7 +1,7 @@
 .page
   .hero-section
     %h1 Research
-    %ul.public-subnav= render "subnav"
+    %ul.public-subnav= render partial: "pages/subnav"
   .main-section
     .main-section-content
       %p The GradeCraft team  engages in research focused on the design and use of gameful learning. Our work supports the creation of knowledge and tools that improve GradeCraft, improve our ability to support gameful pedagogy, and contribute to the larger community working towards educational improvement.
