--- a/app/views/pages/team.html.haml
+++ b/app/views/pages/team.html.haml
@@ -1,7 +1,7 @@
 .page
   .hero-section
     %h1 Our Team
-    %ul.public-subnav= render "subnav"
+    %ul.public-subnav= render partial: "pages/subnav"
   .main-section
     .main-section-content
       = image_tag "gradecraft-team.jpg", :class => "team-photo"
