Styled form validation error messages

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -150,6 +150,11 @@ ul.accepts_submission_types
   color: $color-white
   padding: .3rem .7rem
 
+error
+  color: $color-red-1
+  font-weight: bold
+  padding-left: .5rem
+
 .inline-list > li > *
   display: block
   width: 100%
