--- a/app/views/students/syllabus/_assignments.haml
+++ b/app/views/students/syllabus/_assignments.haml
@@ -16,4 +16,4 @@
 
       // Display the assignments for each assignment type in a responsive table, below header.
       %table.default_assignments_dynatable.dynatable
-        = render "students/syllabus/assignment_table", presenter: presenter, assignment_type: assignment_type
+        = render partial: "students/syllabus/assignment_table", locals: { presenter: presenter, assignment_type: assignment_type }
