--- a/app/views/students/teams.html.haml
+++ b/app/views/students/teams.html.haml
@@ -4,14 +4,14 @@
   = render "layouts/alerts"
 
   %h4.italic.not_bold
-    = render "teams/leaderboard"
+    = render partial: "teams/leaderboard"
     - if @team.present?
       - if current_course.in_team_leaderboard? || @team.in_team_leaderboard?
-        = render "teams/in_team_rankings", team: @team
+        = render partial: "teams/in_team_rankings", locals: { team: @team }
 
       %h4.subtitle Your #{term_for :team} (#{@team.name}) has earned #{points @team.challenge_grade_score } points
       - if @team.banner.present?
         %img.clear{:src => @team.banner, :height => 200 }
 
     - if current_course.challenges.present?
-      = render "challenges/student_index"
+      = render partial: "challenges/student_index"
