--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -7,5 +7,5 @@
 .pageContent
   = render "layouts/alerts"
 
-  = render "leaderboard"
-  = render "stats"
+  = render partial: "teams/leaderboard"
+  = render partial: "teams/stats"
