--- a/app/views/users/_gradecraft_user_form.html.haml
+++ b/app/views/users/_gradecraft_user_form.html.haml
@@ -14,4 +14,4 @@
       = f.label :display_name
       = f.text_field :display_name
   = render partial: "courses", locals: { form: f }
-  = render "submit_buttons"
+  = render partial: "users/submit_buttons"
