--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -10,15 +10,14 @@
     flex-direction: column
     margin-right: 1rem
 
+    &:last-child
+      margin-right: 0
+
   .col-30
     width: 30%
 
   .col-40
     width: 40%
-
-  .column-row
-    display: flex
-    flex-direction: row
 
   .dashboard-module
     margin-bottom: 1.25rem
@@ -123,3 +122,11 @@
 
   .button
     border-radius: $global-radius
+
+
+@media (max-width: $media-small-max)
+  .student-sidebar
+    flex-direction: column
+
+    .col-30, .col-40
+      width: 100%
