--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -1,7 +1,7 @@
 @import color
 @import layout
 
-.student-dashboard
+#student-dashboard
   display: -webkit-box
   display: -webkit-flex
   display: -ms-flexbox
@@ -152,7 +152,7 @@
 
 
 @media (max-width: $media-small-max)
-  .student-dashboard
+  #student-dashboard
     flex-direction: column
 
     .col-30, .col-40
