--- a/app/views/layouts/mailers/announcement_layout.html.haml
+++ b/app/views/layouts/mailers/announcement_layout.html.haml
@@ -20,4 +20,4 @@
                 %td= yield
               = render partial: "layouts/mailers/social_media"
     / footer
-    -# = render partial: "layouts/mailers/footer"
+    = render partial: "layouts/mailers/footer"
