--- a/app/views/notification_mailer/grade_released.html.haml
+++ b/app/views/notification_mailer/grade_released.html.haml
@@ -7,8 +7,8 @@
 %p
 %h4{:align => "center"}
   Click
-  =link_to "here", assignments_path(id: @assignment.id)
-  to view feedback for the assignment.
+  =link_to "here", assignment_path(@assignment)
+  to view your results.
 %hr/
 %p{:align => "center"}
   Don't forget to update your plan for the semester by checking your
