--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -2,16 +2,17 @@
 
 %h3.pagetitle= @title
 
-.context_menu
-  %ul
-    %li
-      %a{:href => new_event_path }
-        = glyph(:plus)
-        New Calendar Event
-    %li
-      %a{:href => edit_event_path(@event) }
-        = glyph(:edit)
-        Edit
+-if current_user_is_staff?
+  .context_menu
+    %ul
+      %li
+        %a{:href => new_event_path }
+          = glyph(:plus)
+          New Calendar Event
+      %li
+        %a{:href => edit_event_path(@event) }
+          = glyph(:edit)
+          Edit
 
 .pageContent
   = render "layouts/alerts"
