--- a/app/views/students/dashboard/_dashboard_to_do_list.haml
+++ b/app/views/students/dashboard/_dashboard_to_do_list.haml
@@ -5,34 +5,4 @@
     .planner-filter.clearfix
       = link_to "Course Planner", "#", class: "filter-button button selected", id: "course-planner"
       = link_to "My Planner", "#", class: "filter-button button", id: "my-planner"
-    %ul.todo-list-assignments
-      - cache multi_cache_key :student_dashboard_todo_list, current_student, current_course do
-        - presenter.assignments.each do |assignment|
-          - if presenter.to_do?(assignment)
-            %li{:class => presenter.starred?(assignment) ? "assignment-item starred" : "assignment-item"}
-              - if presenter.submittable?(assignment)
-                - if assignment.is_individual?
-                  .right= render "students/submissions", assignment: assignment
-                - else
-                  .right= render "students/group_submissions", assignment: assignment, group: current_student.group_for_assignment(assignment)
-              - if presenter.starred?(assignment)
-                %a.starred
-                  %i.fa.fa-star.fa-fw.yellow
-                .display_on_hover.hover-style
-                  You have included this #{term_for :assignment} in your grade prediction
-              - if presenter.submitted?(assignment)
-                %span.strikethrough.assignment-name= link_to "#{assignment.try(:name)}", assignment
-                .small.uppercase= "#{assignment.assignment_type.name}"
-              - else
-                - if assignment.name_visible_for_student?(current_student)
-                  %span.bold.assignment-name= link_to assignment.name, grade_path(Grade.find_or_create(assignment.id, current_student.id))
-                - else
-                  %span.bold.assignment-name= "Locked #{(term_for :assignment ).titleize}"
-                  %span.italic= "You must unlock this #{term_for :assignment } to learn more about it"
-                .small.uppercase= "#{assignment.assignment_type.name}"
-                .form_label= "Due: #{assignment.try(:due_at).strftime("%A, %B %d, %Y, at %l:%M%p")}"
-    .my-planner-alert.hidden
-      %p
-        You have not predicted any #{(term_for :assignments).downcase}! Check out the
-        = link_to 'grade predictor', predictor_path 
-        to add #{(term_for :assignments).downcase} to this planner.
+    = render partial: "students/dashboard/dashboard_to_do_list_items", locals: { presenter: presenter }
