added class to each ul to use for hiding and showing after click in js

--- a/app/views/students/dashboard/_dashboard_to_do_list_items.haml
+++ b/app/views/students/dashboard/_dashboard_to_do_list_items.haml
@@ -1,4 +1,4 @@
-%ul.todo-list-assignments.list_class
+%ul{:class => "todo-list-assignments #{list_class}"}
   - cache multi_cache_key :student_dashboard_todo_list, current_student, current_course do
     - assignment_list.each do |assignment|
       %li{:class => presenter.starred?(assignment) ? "assignment-item starred" : "assignment-item"}
