--- a/app/views/importers/assignments.html.haml
+++ b/app/views/importers/assignments.html.haml
@@ -25,4 +25,5 @@
 
     .submit-buttons
       .right
-        = submit_tag "Import Selected Assignments into #{current_course.name}", class: "button disabled", disabled: true, data: { behavior: "selected-assignments-command" }
+        %p= select_tag :assignment_type_id, options_from_collection_for_select(@assignment_types, :id, :name), prompt: "Select an assignment type"
+        %p= submit_tag "Import Selected Assignments into #{current_course.name}", class: "button disabled", disabled: true, data: { behavior: "selected-assignments-command" }
