--- a/app/views/students/dashboard/_dashboard_to_do_list.haml
+++ b/app/views/students/dashboard/_dashboard_to_do_list.haml
@@ -5,5 +5,5 @@
     .planner-filter.clearfix
       = link_to "Course Planner", "#", class: "filter-button button selected", id: "course-planner"
       = link_to "My Planner", "#", class: "filter-button button", id: "my-planner"
-    = render partial: "students/dashboard/dashboard_to_do_list_items", locals: { presenter: presenter, assignment_list: presenter.to_do_assignments, list_class: "course-planner" }
-    = render partial: "students/dashboard/dashboard_to_do_list_items", locals: { presenter: presenter, assignment_list: presenter.my_planner_assignments, list_class: "my-planner" }
+    = render partial: "students/dashboard/dashboard_to_do_list_items", locals: { presenter: presenter, assignment_list: presenter.to_do_assignments, list_class: "course-planner-list" }
+    = render partial: "students/dashboard/dashboard_to_do_list_items", locals: { presenter: presenter, assignment_list: presenter.my_planner_assignments, list_class: "my-planner-list" }
