--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -230,7 +230,8 @@ ul.subnav.logged-out
     width: 280px
     height: 100%
     z-index: 100
-    overflow: auto
+    overflow-y: auto
+    -webkit-overflow-scrolling: touch
     left: -280px
 
     ul
