--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -2,17 +2,18 @@
 
 %h3.pagetitle#tableCaption= @title
 
-.context_menu
-  %ul
-    %li
-      %a{:href => new_course_path }
-        %i.fa.fa-plus
-        New Course
-    -#
+- if current_user_is_staff?
+  .context_menu
+    %ul
       %li
-        %a{:href => importers_path }
-          %i.fa.fa-cloud-download
-          Import Courses
+        %a{:href => new_course_path }
+          %i.fa.fa-plus
+          New Course
+      -#
+        %li
+          %a{:href => importers_path }
+            %i.fa.fa-cloud-download
+            Import Courses
 
 .pageContent
   = render partial: "layouts/alerts"
@@ -24,19 +25,19 @@
         %th{scope: "col"} Name
         %th{scope: "col"} Year
         %th{scope: "col"} Semester
-        %th{scope: "col"} # of Students
-        %th{scope: "col"} Teams
         %th{scope: "col"} Total Points
-        %th{scope: "col"} Badges
-        %th
-        %th
-        %th
-        %th
-        %th
-        %th
-        %th
-        %th{scope: "col" }
-          %span.sr-only Actions
+        - if current_user_is_staff?
+          %th{scope: "col"} # of Students
+          %th{scope: "col"} Teams
+          %th{scope: "col"} Badges
+          %th
+          %th
+          %th
+          %th
+          %th
+          %th
+          %th{scope: "col" }
+            %span.sr-only Actions
     %tbody
       - @courses.each do |course|
         %tr
@@ -44,20 +45,21 @@
           %td= link_to course.name, change_current_course_path(course_id: course.id)
           %td= course.year
           %td= course.semester
-          %td= course.student_count
-          %td= course.teams ? "Yes" : "No"
           %td= points course.total_points
-          %td= link_to "Awarded Badges", export_earned_badges_path(id: course.id, format: "csv") if course.badges.present?
-          %td= link_to_unless_current "Research Grades", research_gradebook_path(id: course.id, format: "csv"), :class=>"data-clearing"
-          %td= link_to_unless_current "Final Grades", final_grades_path(id: course.id, format: "csv"), :class=>"data-clearing"
-          %td= link_to_unless_current glyph("") + "#{term_for :assignment} Structure", export_structure_assignments_path(id: course.id, format: "csv")
-          %td= link_to "#{term_for :assignment_type } Summaries", export_all_scores_assignment_types_path(id: course.id, format: "csv")
-          %td= link_to  "Full Gradebook", gradebook_path(id: course.id, format: "csv")
-          %td= link_to  "Multiplied Gradebook", multiplied_gradebook_path(id: course.id, format: "csv") if course.student_weighted?
-          %td
-            .right
-              %ul.button-bar
-                %li= link_to glyph(:edit) + "Edit", edit_course_path(course), class: "button"
-                %li= link_to glyph(:trash) + "Delete", course, class: "button", id: "course-id-#{course.id}", data: { confirm: "This will delete #{course.name} - are you sure?" }, :method => :delete
-                %li= link_to glyph(:copy) + "Copy", copy_courses_path(id: course.id), class: "button", :method => :copy
-                %li= link_to glyph(:copy) + "Copy + Students", copy_courses_path(id: course.id, copy_type: "with_students"), class: "button", :method => :copy
+          - if current_user_is_staff?
+            %td= course.student_count
+            %td= course.teams ? "Yes" : "No"
+            %td= link_to "Awarded Badges", export_earned_badges_path(id: course.id, format: "csv") if course.badges.present?
+            %td= link_to_unless_current "Research Grades", research_gradebook_path(id: course.id, format: "csv"), :class=>"data-clearing"
+            %td= link_to_unless_current "Final Grades", final_grades_path(id: course.id, format: "csv"), :class=>"data-clearing"
+            %td= link_to_unless_current glyph("") + "#{term_for :assignment} Structure", export_structure_assignments_path(id: course.id, format: "csv")
+            %td= link_to "#{term_for :assignment_type } Summaries", export_all_scores_assignment_types_path(id: course.id, format: "csv")
+            %td= link_to  "Full Gradebook", gradebook_path(id: course.id, format: "csv")
+            %td= link_to  "Multiplied Gradebook", multiplied_gradebook_path(id: course.id, format: "csv") if course.student_weighted?
+            %td
+              .right
+                %ul.button-bar
+                  %li= link_to glyph(:edit) + "Edit", edit_course_path(course), class: "button"
+                  %li= link_to glyph(:trash) + "Delete", course, class: "button", id: "course-id-#{course.id}", data: { confirm: "This will delete #{course.name} - are you sure?" }, :method => :delete
+                  %li= link_to glyph(:copy) + "Copy", copy_courses_path(id: course.id), class: "button", :method => :copy
+                  %li= link_to glyph(:copy) + "Copy + Students", copy_courses_path(id: course.id, copy_type: "with_students"), class: "button", :method => :copy
