--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -91,7 +91,7 @@
     padding: 2rem
     text-align: center
 
-  .my-planner-list
+  .course-planner-list
     display: none
 
   /* Styles the small version of the grading scheme */
