removed soon filter on my planner assignments so predicted assignments would show for courses with no due dates

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -135,6 +135,8 @@ tbody
   &.selected
     border-bottom: 2px solid $color-blue-3
     color: $color-blue-3
+    pointer-events: none
+    cursor: default
 
 .notification-badge
   background-color: $color-red-1
