--- a/app/views/students/dashboard/_dashboard_since_last_login.haml
+++ b/app/views/students/dashboard/_dashboard_since_last_login.haml
@@ -1,3 +1,13 @@
 .card-header
   %h3 Weekly Stats
 .card-body
+  %p Total points earned this week:
+  %span= current_student.points_earned_for_course_this_week(current_course)
+  %p Grades received this week:
+  - current_student.grades_released_for_course_this_week(current_course).each do |grade|
+    %p
+      %span= grade.assignment_id
+      %span= grade.final_points
+
+  %p Badges earned this week
+  %span= current_student.earned_badges_for_course_this_week(current_course)
